@@ -63,15 +63,10 @@ p:first-child {
 p:last-child {
   margin-bottom: 0;
 }
-blockquote > table,
-div.topic > table {
-  margin-top: 0;
-  margin-bottom: 0;
-}
 
 /* Indented Blocks */
 blockquote,
-div.topic {
+.topic {
   /* background-color: Honeydew; */
   margin: 0.5em 2%;
   padding-left: 1em;
@@ -138,7 +133,7 @@ p.section-subtitle {
 }
 
 /* Dedication and Abstract */
-div.topic.dedication {
+div.dedication {
   padding: 0;
   margin-left: 0;
   font-style: italic;
@@ -151,12 +146,12 @@ div.dedication p.topic-title {
 
 /* Attribution */
 blockquote p.attribution,
-div.topic p.attribution {
+.topic p.attribution {
   text-align: right;
 }
 
 /* Table of Contents */
-div.topic.contents {
+nav.contents {
   padding: 0;
   font-style: italic;
 }
@@ -164,7 +159,7 @@ ul.auto-toc > li > p {
   padding-left: 1em;
   text-indent: -1em;
 }
-div.topic.contents ul { 
+nav.contents ul { 
   padding-left: 1em;
 }
 
@@ -517,10 +512,10 @@ figure.marginal > figcaption {
   /* Fullwidth Elements */
   h1.title, p.subtitle,
   dl.docinfo,
-  div.topic.abstract,
-  div.topic.dedication,
-  div.topic.contents,
-  div.system-message,
+  div.abstract,
+  div.dedication,
+  nav.contents,
+  aside.system-message,
   pre,
   .fullwidth,
   .fullwidth img,
@@ -538,7 +533,7 @@ figure.marginal > figcaption {
   main, header, footer {
     padding-left: 30%;
   }
-  main > div.topic.contents {
+  main > nav.contents {
     position: fixed;
     top: 0;
     left: 0;
@@ -550,7 +545,7 @@ figure.marginal > figcaption {
     padding: 5.5em 2%;
     overflow: auto;
   }
-  main > div.topic.contents > * {
+  main > nav.contents > * {
     padding-left: 0;
   }
 }
