@@ -98,10 +98,10 @@ admonitions<a class="footnote-reference superscript" href="#footnote-8" id="foot
 </aside>
 <aside class="footnote superscript" id="footnote-9" role="note">
 <span class="label"><span class="fn-bracket">[</span><a class="fn-backref" href="#footnote-reference-12">9</a><span class="fn-bracket">]</span></span>
-<div class="admonition note">
+<aside class="admonition note">
 <p class="admonition-title">Note</p>
 <p>This is a note in a note.</p>
-</div>
+</aside>
 </aside>
 <aside class="footnote superscript" id="footnote-10" role="note">
 <span class="label"><span class="fn-bracket">[</span>10<span class="fn-bracket">]</span></span>
